--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -26,6 +26,9 @@ CTYPE html>
 					      <a href="https://www.alxafrica.com/" target="_blank">
 						          <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="300">
 							    </a>
+							    <!-- أضف في أي مكان مناسب -->
+							    <p>Want to see my tweets? <a href="tweets.html">Check them here!</a></p>
+
 	</body>
 </html>
 
