--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,35 +1,50 @@
-CTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		  <meta charset="UTF-8">
-		    <title>My First Portfolio</title>
-	</head>
-	<body>
-		  <!-- Heading Level 1 -->
-		    <h1>Welcome to My First Webpage</h1>
+<head>
+  <meta charset="UTF-8">
+  <title>My First Portfolio</title>
+</head>
+<body>
+  <!-- Header / Navigation -->
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-		      <!-- Paragraphs -->
-		        <p>This is my first paragraph, introducing myself and my goals.</p>
-			  <p>This is my second paragraph, talking about my skills and interests.</p>
-			    <p>Here is my third paragraph, sharing a bit about my projects.</p>
-			      <p>Finally, the fourth paragraph gives a glimpse of my future plans.</p>
+  <!-- Main Content -->
+  <main>
+    <!-- Article: original content -->
+    <article>
+      <h1>Welcome to My First Webpage</h1>
+      <p>This is my first paragraph, introducing myself and my goals.</p>
+      <p>This is my second paragraph, talking about my skills and interests.</p>
+      <p>Here is my third paragraph, sharing a bit about my projects.</p>
+      <p>Finally, the fourth paragraph gives a glimpse of my future plans.</p>
 
-			        <!-- Heading Level 2 -->
-				  <h2>About Me</h2>
-				    <p>I am passionate about software development and learning new technologies.</p>
+      <h2>About Me</h2>
+      <p>I am passionate about software development and learning new technologies.</p>
 
-				      <!-- Heading Level 3 -->
-				        <h3>My Favorite Projects</h3>
-					  <p>I enjoy working on web development projects, building small apps, and experimenting with new tools.</p>
+      <h3>My Favorite Projects</h3>
+      <p>I enjoy working on web development projects, building small apps, and experimenting with new tools.</p>
 
-					    <!-- Clickable Image -->
-					      <a href="https://www.alxafrica.com/" target="_blank">
-						          <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="300">
-							    </a>
-							    <!-- أضف في أي مكان مناسب -->
-							    <p>Want to see my tweets? <a href="tweets.html">Check them here!</a></p>
+      <a href="https://www.alxafrica.com/" target="_blank">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="300">
+      </a>
+      
+      <p>Want to see my tweets? <a href="tweets.html">Check them here!</a></p>
+    </article>
 
-	</body>
+    <!-- Aside: placeholder for comments -->
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>Made by Mostafa Khamis - <a href="https://www.alxafrica.com/" target="_blank">here</a></p>
+  </footer>
+</body>
 </html>
-
-
