--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -34,6 +34,43 @@
       </a>
       
       <p>Want to see my tweets? <a href="tweets.html">Check them here!</a></p>
+
+      <!-- Learners Table -->
+      <section>
+        <h2>Some of the Learners</h2>
+        <table border="1" cellspacing="0" cellpadding="5">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Age</th>
+              <th>Country</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>John</td>
+              <td>25</td>
+              <td>USA</td>
+            </tr>
+            <tr>
+              <td>Emily</td>
+              <td>28</td>
+              <td>Canada</td>
+            </tr>
+            <tr>
+              <td>Michael</td>
+              <td>32</td>
+              <td>Australia</td>
+            </tr>
+            <tr>
+              <td>Sophia</td>
+              <td>21</td>
+              <td>UK</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+
     </article>
 
     <!-- Aside: placeholder for comments -->
